# agentic-devops-pipeline-v2

./: .coverage  .env.example  .gitignore  AGENTS.md  Blueprint_v2.docx  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CURRENT_TASK.md  Caddyfile  Dockerfile  GEMINI.md  GEMINI_DESIGN_REVIEW_PROMPT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: hooks.json  launch.json
.claude/commands/: finish-task.md  start-task.md
.claude/hooks/: monitor_client.py  monitor_hook.py
.codex/: config.toml
.github/workflows/: ci.yml  desktop.yml
.playwright-mcp/: page-2026-04-02T12-08-59-452Z.yml  page-2026-04-02T12-39-22-295Z.yml
.serena/: project.yml
chatgpt-companion/web/: index.html  package-lock.json  package.json  vite.config.ts
desktop/: electron-builder.yml  index.html  package.json  tsconfig.json
desktop/dist-electron/: main.js  tsconfig.tsbuildinfo
desktop/electron/: main.ts  preload.cjs  preload.ts  tsconfig.json
desktop/src/: App.module.css  App.tsx  index.css  mockLinearData.ts
docs/: ARCHITECTURE.md  CHATGPT_COMPANION.md  JULES_INTEGRATION.md  PLAN-pipeline-monitor-v2.md  RALHP-LOOP-GUIDELINES.md  README.md  REMOTE_DEV.md  SPEC-pipeline-monitor-v2.md  jules-playbook.md
docs/plans/: 2026-03-08-sejfa-desktop-transformation-design.md  2026-03-08-sejfa-desktop-transformation.md  2026-03-14-sejfa-desktop-app.md
scripts/: ci_check.sh  create-branch.sh  create-pr.sh  deploy-hetzner.sh  fix-tinyexec.mjs  jules_payload.py  jules_review_api.py  jules_to_jira.py  loop-runner.sh  setup-hooks.sh  start-chatgpt-companion.sh  start-sejfa-local.sh
scripts/ccow/: session_start.sh
scripts/systemd/: install.sh  sejfa-loop-runner.service  sejfa-monitor-api.service  sejfa-reverse-tunnel@.service  sejfa-voice-pipeline.service
services/loop-engine/: README.md
src/: monitor  voice_pipeline
src/chatgpt_companion/: __init__.py  config.py  mcp_server.py  service.py  widget.py
src/monitor/: config.py  cost_tracker.py  models.py  stuck_detector.py  ws_manager.py
src/sejfa/: __init__.py
src/voice_pipeline/: main.py  persistent_loop_queue.py
tests/: conftest.py  test_sanitize.py  test_smart_commit.py  test_start_sejfa_local.py
tests/agent/: test_classify_failure.py  test_jules_payload.py  test_monitor_client.py  test_prevent_push.py  test_stop_hook.py
voice-app/: .gitignore  ARCHITECTURE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.electron.json  vite.config.ts  vitest.config.ts
voice-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
voice-app/src-tauri/src/: api.rs  lib.rs  main.rs  mic.rs
(+193 files in other folders)
