[package]
name = "agentic-devops-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
hound = "3.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "agentic_devops_voice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "agentic-devops-voice"
path = "src/main.rs"
